# QualityControl

./: Activity_8h__dep__incl.map  Activity_8h__dep__incl.md5  CheckInterface_8h__dep__incl.map  CheckInterface_8h__dep__incl.md5  Checker_8h__dep__incl.map  Checker_8h__dep__incl.md5  DatabaseInterface_8h__dep__incl.map  DatabaseInterface_8h__dep__incl.md5  ExamplePrinterSpec_8h.html  InformationService_8h_source.html  InfrastructureGenerator_8h_source.html  MonitorObject_8h__dep__incl.map  MonitorObject_8h__dep__incl.md5  ObjectsManager_8h__dep__incl.map  ObjectsManager_8h__dep__incl.md5  QcInfoLogger_8h__dep__incl.map  QcInfoLogger_8h__dep__incl.md5  Quality_8h__dep__incl.map  Quality_8h__dep__incl.md5  RepositoryBenchmark_8h_source.html  TaskConfig_8h__dep__incl.map  TaskConfig_8h__dep__incl.md5  TaskInterface_8h__dep__incl.map  TaskInterface_8h__dep__incl.md5  TaskRunnerFactory_8h_source.html  dir_000024_000001.html  dir_789eab27568de29e5ef4e65af023cceb.html  dir_789eab27568de29e5ef4e65af023cceb.js  dir_789eab27568de29e5ef4e65af023cceb_dep.map  dir_789eab27568de29e5ef4e65af023cceb_dep.md5  dir_bcbb2cf9a3d3d83e5515c82071a07177_dep.map  dir_bcbb2cf9a3d3d83e5515c82071a07177_dep.md5  files.html  index.html  md_doc_ModulesDevelopment.html  md_doc_QuickStart.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  (+9 more)
Framework/: CMakeLists.txt
Framework/include/QualityControl/: CustomParameters.h
Framework/src/: CustomParameters.cxx  runQC.cxx
Modules/CTP/src/: CTPTrendingTask.cxx
Modules/Common/: CMakeLists.txt
Modules/Common/include/Common/: TrendCheck.h
Modules/Common/src/: ObjectComparatorInterface.cxx  TrendCheck.cxx
Modules/MUON/: CMakeLists.txt
Modules/MUON/Common/: CMakeLists.txt
Modules/MUON/Common/include/MUONCommon/: Helpers.h  LinkDef.h  MCHMIDTask.h  TrackPlotter.h  TracksTask.h
Modules/MUON/Common/src/: Helpers.cxx  MCHMIDTask.cxx  TrackPlotter.cxx  TracksTask.cxx
Modules/MUON/MCH/: CMakeLists.txt  mch-decodingerrors-digits.json  mch-decodingerrors-direct.json  mch-decodingerrors.json  mch-digits-preclusters.json  mch-digits.json  mch-full.json  mch-preclusters.json
Modules/MUON/MCH/etc/: qc-mch-decoding.json  qc-mch-digits.json  qc-mch-preclusters.json
Modules/MUON/MCH/include/MCH/: ClusterChargeTrendsPlotter.h  ClusterSizeTrendsPlotter.h  Decoding.h  DecodingCheck.h  DecodingErrorsPlotter.h  DecodingPostProcessing.h  DecodingTask.h  DigitsCheck.h  DigitsTask.h  EfficiencyTrendsPlotter.h  GlobalHistogram.h  HeartBeatPacketsPlotter.h  Helpers.h  LinkDef.h  MCHPostProcessing.h  Mapping.h  MergeableTH1OccupancyPerDE.h  MergeableTH1PseudoEfficiencyPerDE.h  PedestalsCheck.h  PedestalsTask.h  PhysicsCheck.h  PhysicsCheckDigits.h  PhysicsTask.h  PhysicsTaskDigits.h  PhysicsTaskPreclusters.h  PreclustersCheck.h  PreclustersTask.h  QualityPostProcessing.h  RatesPlotter.h  RatesTrendsPlotter.h  TH1MCHReductor.h  TH2ElecHBPacketsReductor.h  TH2ElecMapReductor.h  TrendingTracks.h
Modules/MUON/MCH/src/: ClusterChargeTrendsPlotter.cxx  ClusterSizeTrendsPlotter.cxx  Decoding.cxx  DecodingCheck.cxx  DecodingErrorsPlotter.cxx  DecodingPostProcessing.cxx  DecodingTask.cxx  DigitsCheck.cxx  DigitsPostProcessing.cxx  DigitsTask.cxx  EfficiencyPlotter.cxx  EfficiencyTrendsPlotter.cxx  GlobalHistogram.cxx  HeartBeatPacketsPlotter.cxx  Helpers.cxx  MCHPostProcessing.cxx  Mapping.cxx  MergeMCH.cxx  OrbitsPlotter.cxx  PedestalsCheck.cxx  PedestalsTask.cxx  PhysicsCheck.cxx  PhysicsCheckDigits.cxx  PhysicsTask.cxx  PhysicsTaskDigits.cxx  PhysicsTaskPreclusters.cxx  PreclustersCheck.cxx  PreclustersPostProcessing.cxx  PreclustersTask.cxx  QualityCheck.cxx  QualityPostProcessing.cxx  RatesPlotter.cxx  RatesTrendsPlotter.cxx  TH1MCHReductor.cxx  TH2ElecHBPacketsReductor.cxx  TH2ElecMapReductor.cxx  TrendingTracks.cxx
Modules/MUON/MUONCommon/: CMakeLists.txt
Modules/MUON/MUONCommon/include/MUONCommon/: LinkDef.h  MCHMIDTask.h
Modules/MUON/MUONCommon/src/: MCHMIDTask.cxx
doc/: PostProcessing.md
